--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-db.url=jdbc:postgresql://localhost:5432/tanks
+db.url=jdbc:postgresql://localhost:5432/flight_repository
 db.username=postgres
 db.password=postgres
 db.pool.size=5
-# fire fire
