prepare auth & registration function-3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-db.url=jdbc:postgresql://localhost:5432/flight_repository
+#db.url=jdbc:postgresql://localhost:5432/flight_repository
+db.url=jdbc:postgresql://localhost:5432/tanks
 db.username=postgres
 db.password=postgres
 db.pool.size=5
