--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
-    implementation 'org.postgresql:postgresql:42.6.0' // Подключаем зависимость
-//    driver group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
-//    compile group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+    implementation 'org.postgresql:postgresql:42.6.0'
 }
 
 test {
